Salesforce_Server/src/objects/DeploymentSettingClient__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>BaseOrganizationId__c</fullName>
        <label>BaseOrganizationId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshTokenCode__c</fullName>
        <label>RefreshTokenCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <label>Server URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenCode__c</fullName>
        <label>TokenCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DeploymentSettingClient</label>
</CustomObject>